2003-03-12  Nathanael Nerode  <neroden@gcc.gnu.org>

	* g77.texi, invoke.texi, g77spec.c, lang-specs.h: GCC, not
	GNU CC.  Especially here.

2003-03-10  Roger Sayle  <roger@eyesopen.com>

	* com.c (duplicate_decls): Synchronize with C's duplicate_decls.

Sat Mar  8 21:11:40 2003  Neil Booth  <neil@daikokuya.co.uk>

	* com.c (ffe_init): Update prototype; move code to ffe_post_options.
	(ffe_post_options): New.

2003-03-04  Tom Tromey  <tromey@redhat.com>

	* Make-lang.in (f77.tags): New target.

2003-02-20  Toon Moene  <toon@moene.indiv.nluug.nl>

	* news.texi: Document fixing PR fortran/9038.

2003-02-04  Joseph S. Myers  <jsm@polyomino.org.uk>

	* g77.texi, invoke.texi: Update to GFDL 1.2.

2003-01-31  Toon Moene  <toon@moene.indiv.nluug.nl>

	* news.texi: Document fixing PR fortran/7681
	and optimization/9258.

2003-01-26  Toon Moene  <toon@moene.indiv.nluug.nl>

	* lang-specs.h: Revoke change to (incorrectly) prohibit
	passing -f options to cc1 when preprocessing.
	* news.texi: Document this.

Tue Jan 21 08:42:12 2003  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	Make-lang.in (f/sta.o-warn): Add -Wno-error.

Thu Jan 16 10:53:16 2003  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* Make-lang.in (f/target.o): Depend on toplev.h.
	* target.c: Include toplev.h.

Sat Jan 11 21:31:10 2003  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* com.c (ffecom_convert_narrow_, ffecom_convert_widen_,
	pushdecl_top_level, storedecls, convert, delete_block,
	insert_block, ffe_init, ffe_mark_addressable, poplevel,
	ffe_print_identifier, pushdecl, pushlevel, set_block,
	ffe_signed_or_unsigned_type, ffe_signed_type,
	ffe_truthvalue_conversion, ffe_type_for_mode, ffe_type_for_size,
	ffe_unsigned_type, append_include_chain, open_include_file,
	read_filename_string, read_name_map): Convert to ISO C style function
	definitions.
	* parse.c (ffe_parse_file): Likewise.
	* top.c (ffe_is_digit_string_): Likewise.

2003-01-09  Christian Cornelssen  <ccorn@cs.tu-berlin.de>
